# symmetria-whatsapp

./: .gitignore  CLAUDE.md  CMakeLists.txt
docs/: PRD.md
resources/: selectors.json
src/: DownloadHandler.h  ProfileSetup.h  main.cpp
src/js/: keyboard-nav.js
src/qml/: AccountSidebar.qml  AccountView.qml  Main.qml  TitleBar.qml
